Refactor User Model & Signup Method
