# src/api/resources/users/user.router.js
@@ -4,7 +4,7 @@ import * as userController from './user.controller';
 
 export const userRouter = express.Router();
 
-userRouter.get('/', userController.getAllUsers);
+userRouter.get('/', passport.authenticate('jwt', { session: false }), userController.getAllUsers);
 userRouter.post('/login', userController.login);
 userRouter.post('/signup', userController.signUp);
 userRouter.post('/passport', passport.authenticate('jwt', { session: false }), userController.getLoggedInUser);
